--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: Deployment 
-metadata:
-  name: task3-web-deploy
+kind: Deployment
+metadata: 
+  name: task4-deply
 spec:
   replicas: 3
   selector:
@@ -9,17 +9,18 @@ spec:
     - { key: env, operator: In, values: [ production ] }
   template:
     metadata:
-      name: mytask-pod
+      name: task4-pod
       labels:
         env: production 
     spec:
       containers:
       - name: mytask-con
         image: httpd
-	volumeMounts:
-	- name: mypd
-	  mountPath: /var/www/html
-    volumes:
+        volumeMounts:
+        - mountPath: /var/www/html
+          name: mypd
+
+      volumes:
       - name: mypd
         persistentVolumeClaim:
-          claimName: task3-pvc
+          claimName: task4-pvc
